--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,14 +5,14 @@
 }
 
 .example-sidenav-content {
-  background-color: lightblue;
+  background-color: #5E8FDE;
   height: 45px;
 }
 
 .example-sidenav {
   display: flex;
   padding: 5px 20px 20px 20px;
-  background-color: lightblue;
+  background-color: #5E8FDE;
 }
 
 .example-body {
