--- a/src/Components/hub-view/hub-view.component.html
+++ b/src/Components/hub-view/hub-view.component.html
@@ -1,8 +1,14 @@
+<div class="centerContent">
+
+  <button mat-raised-button color="primary" (click)="createNewHub()"><mat-icon>add</mat-icon>Add hub</button>
+
+</div>
+
 <mat-tab-group>
 
   <mat-tab label="Assigned">
 
-    <div class="mat-elevation-z8" style="margin-top: 20px;">
+    <div class="mat-elevation-z8 topMargin">
 
       <table mat-table [dataSource]="assignedDataSource">
 
@@ -19,11 +25,11 @@
         <ng-container matColumnDef="options">
           <th mat-header-cell *matHeaderCellDef> Options </th>
           <td mat-cell *matCellDef="let element">
-            <button mat-icon-button [matMenuTriggerFor]="appMenu" style="border-color: transparent; background-color: transparent; cursor: pointer;">
+            <button mat-icon-button [matMenuTriggerFor]="appMenu" class="menuButton">
               <mat-icon>more_vert</mat-icon>
             </button>
             <mat-menu #appMenu>
-              <button mat-menu-item>Edit</button>
+              <button mat-menu-item (click)="updateHub(element)">Edit</button>
               <button mat-menu-item>Delete</button>
             </mat-menu>
           </td>
@@ -43,7 +49,7 @@
 
   <mat-tab label="Unassigned">
 
-    <div class="mat-elevation-z8" style="margin-top: 20px;">
+    <div class="mat-elevation-z8 topMargin">
 
       <table mat-table [dataSource]="unassignedDataSource">
 
@@ -60,11 +66,11 @@
         <ng-container matColumnDef="options">
           <th mat-header-cell *matHeaderCellDef> Options </th>
           <td mat-cell *matCellDef="let element">
-            <button mat-icon-button [matMenuTriggerFor]="appMenu" style="border-color: transparent; background-color: transparent; cursor: pointer;">
+            <button mat-icon-button [matMenuTriggerFor]="appMenu" class="menuButton">
               <mat-icon>more_vert</mat-icon>
             </button>
             <mat-menu #appMenu>
-              <button mat-menu-item>Edit</button>
+              <button mat-menu-item (click)="updateHub(element)">Edit</button>
               <button mat-menu-item>Delete</button>
             </mat-menu>
           </td>
