--- a/src/Components/user-view/user-view.component.html
+++ b/src/Components/user-view/user-view.component.html
@@ -1,5 +1,11 @@
 <div class="mat-elevation-z8">
 
+  <div class="centerContent">
+
+    <button mat-raised-button color="primary" (click)="createUser()"><mat-icon>add</mat-icon>Add user</button>
+
+  </div>
+
   <table mat-table [dataSource]="dataSource">
 
     <ng-container matColumnDef="id">
@@ -20,12 +26,12 @@
     <ng-container matColumnDef="options">
       <th mat-header-cell *matHeaderCellDef> Options </th>
       <td mat-cell *matCellDef="let element">
-        <button mat-icon-button [matMenuTriggerFor]="appMenu" style="border-color: transparent; background-color: transparent; cursor: pointer;">
+        <button mat-icon-button [matMenuTriggerFor]="appMenu" class="menuButton">
           <mat-icon>more_vert</mat-icon>
         </button>
         <mat-menu #appMenu>
-          <button mat-menu-item>Edit</button>
-          <button mat-menu-item>Delete</button>
+          <button mat-menu-item (click)="updateUser(element)">Edit</button>
+          <button mat-menu-item (click)="deleteUser(element)">Delete</button>
         </mat-menu>
       </td>
     </ng-container>
