--- a/src/Components/Modals/upsert-sensor/upsert-sensor.component.html
+++ b/src/Components/Modals/upsert-sensor/upsert-sensor.component.html
@@ -1,1 +1,98 @@
-<p>upsert-sensor works!</p>
+<div style="display: flex; justify-content: end; padding-top: 10px; padding-right: 10px;">
+
+  <button mat-icon-button color="warn" (click)="CloseDialog()"><mat-icon>close</mat-icon></button>
+
+</div>
+
+<mat-stepper>
+
+  <mat-step label="Hub configuration" [stepControl]="HubFormGroup" [formGroup]="HubFormGroup">
+
+    <div style="display: flex; justify-content: center; padding: 20px;">
+
+      <mat-form-field *ngIf="!this.data.isAssign" appearance="outline" floatLabel="always" style="width: 80%;">
+        <mat-label>Mac address</mat-label>
+        <input type="text" matInput formControlName="Mac">
+        <mat-error>{{GetErrorMessage(HubFormGroup.get("Mac")!)}}</mat-error>
+      </mat-form-field>
+
+      <mat-form-field *ngIf="this.data.isAssign" appearance="outline" floatLabel="always" style="width: 80%;">
+        <mat-label>Mac address</mat-label>
+        <!-- Add collection of users instead -->
+        <mat-select formControlName="Mac" [compareWith]="CompareMacValues">
+          <mat-option [value]="1">Mac1</mat-option>
+          <mat-option [value]="2">Mac2</mat-option>
+        </mat-select>
+        <mat-error>{{GetErrorMessage(HubFormGroup.get("Mac")!)}}</mat-error>
+      </mat-form-field>
+
+    </div>
+
+    <div style="display: flex; justify-content: center; padding: 20px;">
+
+      <mat-form-field appearance="outline" floatLabel="always" style="width: 80%;">
+        <mat-label>Room name</mat-label>
+        <input type="text" matInput formControlName="RoomName">
+        <mat-error>{{GetErrorMessage(HubFormGroup.get("RoomName")!)}}</mat-error>
+      </mat-form-field>
+
+    </div>
+
+    <div style="display: flex; justify-content: center; padding: 20px;">
+
+      <mat-form-field *ngIf="this.data.isAssign" appearance="outline" floatLabel="always" style="width: 80%;">
+        <mat-label>User</mat-label>
+        <!-- Add collection of users instead -->
+        <mat-select formControlName="User" [compareWith]="CompareValues">
+          <mat-option [value]="1">User1</mat-option>
+          <mat-option [value]="2">User2</mat-option>
+        </mat-select>
+        <mat-error>{{GetErrorMessage(HubFormGroup.get("User")!)}}</mat-error>
+      </mat-form-field>
+
+    </div>
+
+    <div *ngIf="this.data.isAssign">
+
+      <div *ngIf="HubFormGroup.valid" style="display: flex; justify-content: end; padding: 20px;">
+
+        <button mat-raised-button matStepperNext><mat-icon>navigate_next</mat-icon>Next</button>
+
+      </div>
+
+    </div>
+
+    <div *ngIf="!this.data.isAssign">
+
+      <div *ngIf="HubFormGroup.get('RoomName')?.valid" style="display: flex; justify-content: end; padding: 20px;">
+
+        <button mat-raised-button matStepperNext><mat-icon>navigate_next</mat-icon>Next</button>
+
+      </div>
+
+    </div>
+
+  </mat-step>
+
+  <mat-step label="Confirmation">
+
+    <div style="display: flex; justify-content: center; padding: 20px;">
+
+      <mat-form-field appearance="outline" floatLabel="always" style="width: 80%;">
+        <mat-label>Room name</mat-label>
+        <input type="text" matInput disabled="true" [value]="HubFormGroup.get('RoomName')?.value">
+      </mat-form-field>
+
+    </div>
+
+    <div style="display: flex; justify-content: space-between; padding: 20px;">
+
+      <button mat-raised-button matStepperPrevious><mat-icon>navigate_before</mat-icon>Go back</button>
+
+      <button mat-raised-button color="primary" (click)="SaveChanges()"><mat-icon>save</mat-icon>Save changes</button>
+
+    </div>
+
+  </mat-step>
+
+</mat-stepper>
