--- a/src/Components/sensor-reading-view/sensor-reading-view.component.html
+++ b/src/Components/sensor-reading-view/sensor-reading-view.component.html
@@ -1,1 +1,42 @@
-<p>sensor-reading-view works!</p>
+<div style="text-align: center; font-size: 150%; font-weight: 500;">{{name}}</div>
+
+<div class="mat-elevation-z8 topMargin">
+
+  <table mat-table [dataSource]="dataSource">
+
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef> Id </th>
+      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="startTime">
+      <th mat-header-cell *matHeaderCellDef> Start time </th>
+      <td mat-cell *matCellDef="let element"> {{element.startTime.toLocaleString("en-DK")}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="readingTime">
+      <th mat-header-cell *matHeaderCellDef> Reading time </th>
+      <td mat-cell *matCellDef="let element"> {{element.readingTime.toLocaleString("en-DK")}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="timeSinceStart">
+      <th mat-header-cell *matHeaderCellDef> Time since start </th>
+      <td mat-cell *matCellDef="let element"> {{element.timeSinceStart}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="value">
+      <th mat-header-cell *matHeaderCellDef> Value </th>
+      <td mat-cell *matCellDef="let element"> {{element.value.toFixed(2)}} </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+  </table>
+
+  <mat-paginator #paginator [pageSizeOptions]="[10, 25, 50]"
+                 showFirstLastButtons
+                 aria-label="Select page">
+  </mat-paginator>
+
+</div>
