--- a/src/Components/user-details/user-details.component.html
+++ b/src/Components/user-details/user-details.component.html
@@ -1,4 +1,8 @@
-<div style="text-align: center; font-size: 150%; font-weight: 500;">My hubs</div>
+<div style="text-align: center; font-size: 150%; font-weight: 500;">{{name}}'s hubs</div>
+
+<div style="margin-top: 20px; margin-bottom: 20px; display: flex; justify-content: center;">
+  <button mat-raised-button color="primary" (click)="assignHub()"><mat-icon>add</mat-icon>Add hub</button>
+</div>
 
 <div class="mat-elevation-z8 topMargin">
 
@@ -6,17 +10,17 @@
 
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef> Name </th>
-      <td mat-cell *matCellDef="let element" (click)="redirectToHubDetails(element)"> {{getName(element)}} </td>
+      <td mat-cell *matCellDef="let element"> {{getName(element)}} </td>
     </ng-container>
 
     <ng-container matColumnDef="mac">
       <th mat-header-cell *matHeaderCellDef> Mac address </th>
-      <td mat-cell *matCellDef="let element" (click)="redirectToHubDetails(element)"> {{element.mac}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.mac}} </td>
     </ng-container>
 
     <ng-container matColumnDef="roomName">
       <th mat-header-cell *matHeaderCellDef> Room name </th>
-      <td mat-cell *matCellDef="let element" (click)="redirectToHubDetails(element)"> {{element.roomName}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.roomName}} </td>
     </ng-container>
 
     <ng-container matColumnDef="options">
