--- a/src/Components/user-view/user-view.component.html
+++ b/src/Components/user-view/user-view.component.html
@@ -10,17 +10,17 @@
 
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef> Id </th>
-      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+      <td mat-cell *matCellDef="let element" (click)="redirectToUserDetails(element)"> {{element.id}} </td>
     </ng-container>
 
     <ng-container matColumnDef="username">
       <th mat-header-cell *matHeaderCellDef> Username </th>
-      <td mat-cell *matCellDef="let element"> {{element.username}} </td>
+      <td mat-cell *matCellDef="let element" (click)="redirectToUserDetails(element)"> {{element.username}} </td>
     </ng-container>
 
     <ng-container matColumnDef="role">
       <th mat-header-cell *matHeaderCellDef> Role </th>
-      <td mat-cell *matCellDef="let element"> {{element.role}} </td>
+      <td mat-cell *matCellDef="let element" (click)="redirectToUserDetails(element)"> {{element.role}} </td>
     </ng-container>
 
     <ng-container matColumnDef="options">
