Finished upsert sensor component and added dashboard view

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
     <img src="/assets/logo.png" alt="image" (click)="NavigateToHomeView()"
       style="display: block; margin: auto; max-width: 175px; margin-bottom: 30px; cursor: pointer;">
 
-    <button mat-raised-button (click)="NavigateToHomeView()"
+    <button mat-raised-button (click)="NavigateToDashboardView()"
       style="display: block; min-width: 175px; max-width: 175px; margin: auto; text-align: start; margin-bottom: 30px;"
       color="primary">
       <mat-icon>dashboard</mat-icon>Dashboards
