--- a/src/Components/Modals/upsert-sensor/upsert-sensor.component.html
+++ b/src/Components/Modals/upsert-sensor/upsert-sensor.component.html
@@ -10,44 +10,24 @@
 
     <div style="display: flex; justify-content: center; padding: 20px;">
 
-      <mat-form-field *ngIf="!this.data.isAssign" appearance="outline" floatLabel="always" style="width: 80%;">
-        <mat-label>Mac address</mat-label>
-        <input type="text" matInput formControlName="Mac">
-        <mat-error>{{GetErrorMessage(HubFormGroup.get("Mac")!)}}</mat-error>
+      <mat-form-field appearance="outline" floatLabel="always" style="width: 80%;">
+        <mat-label>Type</mat-label>
+        <input type="text" matInput formControlName="Type">
+        <mat-error>{{GetErrorMessage(HubFormGroup.get("Type")!)}}</mat-error>
       </mat-form-field>
 
+    </div>
+
+    <div style="display: flex; justify-content: center; padding: 20px;">
+
       <mat-form-field *ngIf="this.data.isAssign" appearance="outline" floatLabel="always" style="width: 80%;">
-        <mat-label>Mac address</mat-label>
-        <!-- Add collection of users instead -->
-        <mat-select formControlName="Mac" [compareWith]="CompareMacValues">
+        <mat-label>Hub mac address</mat-label>
+        <!-- Add collection of hub mac address' instead -->
+        <mat-select formControlName="Hub" [compareWith]="CompareMacValues">
           <mat-option [value]="1">Mac1</mat-option>
           <mat-option [value]="2">Mac2</mat-option>
         </mat-select>
-        <mat-error>{{GetErrorMessage(HubFormGroup.get("Mac")!)}}</mat-error>
-      </mat-form-field>
-
-    </div>
-
-    <div style="display: flex; justify-content: center; padding: 20px;">
-
-      <mat-form-field appearance="outline" floatLabel="always" style="width: 80%;">
-        <mat-label>Room name</mat-label>
-        <input type="text" matInput formControlName="RoomName">
-        <mat-error>{{GetErrorMessage(HubFormGroup.get("RoomName")!)}}</mat-error>
-      </mat-form-field>
-
-    </div>
-
-    <div style="display: flex; justify-content: center; padding: 20px;">
-
-      <mat-form-field *ngIf="this.data.isAssign" appearance="outline" floatLabel="always" style="width: 80%;">
-        <mat-label>User</mat-label>
-        <!-- Add collection of users instead -->
-        <mat-select formControlName="User" [compareWith]="CompareValues">
-          <mat-option [value]="1">User1</mat-option>
-          <mat-option [value]="2">User2</mat-option>
-        </mat-select>
-        <mat-error>{{GetErrorMessage(HubFormGroup.get("User")!)}}</mat-error>
+        <mat-error>{{GetErrorMessage(HubFormGroup.get("Hub")!)}}</mat-error>
       </mat-form-field>
 
     </div>
@@ -64,7 +44,7 @@
 
     <div *ngIf="!this.data.isAssign">
 
-      <div *ngIf="HubFormGroup.get('RoomName')?.valid" style="display: flex; justify-content: end; padding: 20px;">
+      <div *ngIf="HubFormGroup.get('Type')?.valid" style="display: flex; justify-content: end; padding: 20px;">
 
         <button mat-raised-button matStepperNext><mat-icon>navigate_next</mat-icon>Next</button>
 
@@ -79,8 +59,18 @@
     <div style="display: flex; justify-content: center; padding: 20px;">
 
       <mat-form-field appearance="outline" floatLabel="always" style="width: 80%;">
-        <mat-label>Room name</mat-label>
-        <input type="text" matInput disabled="true" [value]="HubFormGroup.get('RoomName')?.value">
+        <mat-label>Type</mat-label>
+        <input type="text" matInput disabled="true" [value]="HubFormGroup.get('Type')?.value">
+      </mat-form-field>
+
+    </div>
+
+    <div style="display: flex; justify-content: center; padding: 20px;">
+
+      <mat-form-field *ngIf="this.data.isAssign" appearance="outline" floatLabel="always" style="width: 80%;">
+        <mat-label>Hub mac address</mat-label>
+        <!-- <input type="text" matInput disabled="true" [value]="HubFormGroup.valid ? HubFormGroup.get('Hub')?.value.mac : ''"> -->
+        <input type="text" matInput disabled="true" [value]="HubFormGroup.valid ? HubFormGroup.get('Hub')?.value : ''">
       </mat-form-field>
 
     </div>
