--- a/src/Components/hub-details/hub-details.component.html
+++ b/src/Components/hub-details/hub-details.component.html
@@ -1,7 +1,7 @@
 <div style="text-align: center; font-size: 150%; font-weight: 500;">{{name}}'s sensors</div>
 
 <div style="margin-top: 20px; margin-bottom: 20px; display: flex; justify-content: center;">
-  <button mat-raised-button color="primary"><mat-icon>add</mat-icon>Add sensor</button>
+  <button mat-raised-button color="primary" (click)="assignSensor()"><mat-icon>add</mat-icon>Add sensor</button>
 </div>
 
 <div class="mat-elevation-z8 topMargin">
