--- a/src/Components/Modals/upsert-hub/upsert-hub.component.html
+++ b/src/Components/Modals/upsert-hub/upsert-hub.component.html
@@ -10,18 +10,17 @@
 
     <div style="display: flex; justify-content: center; padding: 20px;">
 
-      <mat-form-field *ngIf="!this.data.isAdmin" appearance="outline" floatLabel="always" style="width: 80%;">
+      <mat-form-field *ngIf="!isAdmin" appearance="outline" floatLabel="always" style="width: 80%;">
         <mat-label>Mac address</mat-label>
         <input type="text" matInput formControlName="Mac">
         <mat-error>{{GetErrorMessage(HubFormGroup.get("Mac")!)}}</mat-error>
       </mat-form-field>
 
-      <mat-form-field *ngIf="this.data.isAdmin" appearance="outline" floatLabel="always" style="width: 80%;">
+      <mat-form-field *ngIf="isAdmin" appearance="outline" floatLabel="always" style="width: 80%;">
         <mat-label>Mac address</mat-label>
         <!-- Add collection of users instead -->
         <mat-select formControlName="Mac" [compareWith]="CompareMacValues">
-          <mat-option [value]="1">Mac1</mat-option>
-          <mat-option [value]="2">Mac2</mat-option>
+          <mat-option *ngFor="let item of hubs$ | async" [value]="item">{{item.mac}}</mat-option>
         </mat-select>
         <mat-error>{{GetErrorMessage(HubFormGroup.get("Mac")!)}}</mat-error>
       </mat-form-field>
@@ -40,19 +39,17 @@
 
     <div style="display: flex; justify-content: center; padding: 20px;">
 
-      <mat-form-field *ngIf="this.data.isAdmin" appearance="outline" floatLabel="always" style="width: 80%;">
+      <mat-form-field *ngIf="isAdmin" appearance="outline" floatLabel="always" style="width: 80%;">
         <mat-label>User</mat-label>
-        <!-- Add collection of users instead -->
-        <mat-select formControlName="User" [compareWith]="CompareValues">
-          <mat-option [value]="1">User1</mat-option>
-          <mat-option [value]="2">User2</mat-option>
+        <mat-select formControlName="User" [compareWith]="CompareMacValues">
+          <mat-option *ngFor="let item of users$ | async" [value]="item">{{item.username}}</mat-option>
         </mat-select>
         <mat-error>{{GetErrorMessage(HubFormGroup.get("User")!)}}</mat-error>
       </mat-form-field>
 
     </div>
 
-    <div *ngIf="this.data.isAdmin">
+    <div *ngIf="isAdmin">
 
       <div *ngIf="HubFormGroup.valid" style="display: flex; justify-content: end; padding: 20px;">
 
@@ -62,7 +59,7 @@
 
     </div>
 
-    <div *ngIf="!this.data.isAdmin">
+    <div *ngIf="!isAdmin">
 
       <div *ngIf="HubFormGroup.get('RoomName')?.valid" style="display: flex; justify-content: end; padding: 20px;">
 
