--- a/src/Components/Views/hub-details/hub-details.component.html
+++ b/src/Components/Views/hub-details/hub-details.component.html
@@ -20,7 +20,7 @@
 
     <ng-container matColumnDef="typeName">
       <th mat-header-cell *matHeaderCellDef> Type </th>
-      <td mat-cell *matCellDef="let element" (click)="viewSensorReadings(element)"> {{element.typeName}} </td>
+      <td mat-cell *matCellDef="let element" (click)="viewSensorReadings(element)"> {{element.type}} </td>
     </ng-container>
 
     <ng-container matColumnDef="options">
@@ -36,7 +36,7 @@
       <th mat-header-cell *matHeaderCellDef> Delete </th>
       <td mat-cell *matCellDef="let element">
         <button mat-icon-button (click)="unassignSensor(element)">
-          <mat-icon>edit</mat-icon>
+          <mat-icon>delete</mat-icon>
         </button>
       </td>
     </ng-container>
