--- a/src/Components/Views/my-hub-view/my-hub-view.component.html
+++ b/src/Components/Views/my-hub-view/my-hub-view.component.html
@@ -22,7 +22,13 @@
     <ng-container matColumnDef="options">
       <th mat-header-cell *matHeaderCellDef> Edit </th>
       <td mat-cell *matCellDef="let element">
-        <button mat-icon-button (click)="updateHub(element)"><mat-icon>edit</mat-icon></button>
+        <button mat-icon-button [matMenuTriggerFor]="appMenu" class="menuButton">
+          <mat-icon>more_vert</mat-icon>
+        </button>
+        <mat-menu #appMenu>
+          <button mat-menu-item (click)="updateHub(element)"><mat-icon>edit</mat-icon> Edit</button>
+          <button mat-menu-item (click)="deleteHub(element)"><mat-icon>delete</mat-icon> Delete</button>
+        </mat-menu>
       </td>
     </ng-container>
 
