--- a/src/Components/Views/user-view/user-view.component.html
+++ b/src/Components/Views/user-view/user-view.component.html
@@ -8,14 +8,9 @@
 
   <table mat-table [dataSource]="dataSource">
 
-    <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef> Id </th>
-      <td mat-cell *matCellDef="let element" (click)="redirectToUserDetails(element)"> {{element.id}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="username">
-      <th mat-header-cell *matHeaderCellDef> Username </th>
-      <td mat-cell *matCellDef="let element" (click)="redirectToUserDetails(element)"> {{element.username}} </td>
+    <ng-container matColumnDef="email">
+      <th mat-header-cell *matHeaderCellDef> Email </th>
+      <td mat-cell *matCellDef="let element" (click)="redirectToUserDetails(element)"> {{element.email}} </td>
     </ng-container>
 
     <ng-container matColumnDef="role">
